--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 ﻿<!DOCTYPE html>
 <html lang="tr">
 <head>
-<script>if(window.location.search.indexOf('v=202602220356')===-1){window.location.replace(window.location.pathname+'?v=202602220356');}</script>
+<script>if(window.location.search.indexOf('v=202602220410')===-1){window.location.replace(window.location.pathname+'?v=202602220410');}</script>
 <meta charset="UTF-8">
 <meta http-equiv="Cache-Control" content="no-cache, no-store, must-revalidate">
 <meta http-equiv="Pragma" content="no-cache">
@@ -291,13 +291,15 @@ td.fz{background:#f5f5f5;color:#999;font-weight:700}
 
 <div id="app">
   <div id="topbar">
-    <button id="menu-btn" onclick="toggleDrawer()" title="Ürünler menüsü" style="font-size:24px;min-width:36px">&#9776;</button>
-    <div style="display:flex;flex-direction:column;align-items:flex-start;flex-shrink:0;margin-right:6px">
-      <span style="font-size:11px;font-weight:900;color:#FFB800;letter-spacing:1px;white-space:nowrap;line-height:1.2">ERCAN BRGR</span>
-      <span id="topbar-user" title="Oturum bilgisi" style="font-size:9px;color:#ffb380;white-space:nowrap;overflow:hidden;text-overflow:ellipsis;max-width:90px;line-height:1.2"></span>
+    <div style="display:flex;align-items:center;gap:6px;flex-shrink:0">
+      <button id="menu-btn" onclick="toggleDrawer()" title="Ürünler menüsü" style="font-size:22px;min-width:32px;background:none;border:none;color:#fff;cursor:pointer;padding:4px;line-height:1;flex-shrink:0">&#9776;</button>
+      <div style="display:flex;flex-direction:column;align-items:flex-start">
+        <span style="font-size:12px;font-weight:900;color:#FFB800;letter-spacing:1px;white-space:nowrap;line-height:1.3">ERCAN BRGR</span>
+        <span id="topbar-user" title="Oturum bilgisi" style="font-size:9px;color:#ffb380;white-space:nowrap;max-width:100px;overflow:hidden;text-overflow:ellipsis;line-height:1.2"></span>
+      </div>
     </div>
-    <div id="topbar-title" onclick="openRenameModal()" style="flex:1;min-width:0">
-      <span id="product-name-display" style="display:block;white-space:nowrap;overflow:hidden;text-overflow:ellipsis;font-size:12px">Ürün Seçin</span>
+    <div id="topbar-title" onclick="openRenameModal()" style="flex:1;min-width:0;padding-left:6px">
+      <span id="product-name-display" style="display:block;white-space:nowrap;overflow:hidden;text-overflow:ellipsis;font-size:12px;font-weight:600">Ürün Seçin</span>
     </div>
     <span id="sync-indicator" title="Senkronizasyon durumu">☁️</span>
     <select id="topbar-birim" onchange="saveBirim()" title="Birim">
