YPC.TECNO Ufuk Yapici brand v202602220450

--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 ﻿<!DOCTYPE html>
 <html lang="tr">
 <head>
-<script>if(window.location.search.indexOf('v=202602220440')===-1){window.location.replace(window.location.pathname+'?v=202602220440');}</script>
+<script>if(window.location.search.indexOf('v=202602220450')===-1){window.location.replace(window.location.pathname+'?v=202602220450');}</script>
 <meta charset="UTF-8">
 <meta http-equiv="Cache-Control" content="no-cache, no-store, must-revalidate">
 <meta http-equiv="Pragma" content="no-cache">
@@ -232,8 +232,8 @@ td.fz{background:#f5f5f5;color:#999;font-weight:700}
 </style>
 </head>
 <body>
-<div id="brand-watermark">ERCAN BRGR</div>
-<div id="brand-footer"><span class="bf-logo">ERCAN BRGR</span><span class="bf-sep">●</span><span class="bf-sub">ENVANTER SİSTEMİ</span><span class="bf-sep">●</span><span class="bf-sub">v2026</span></div>
+<div id="brand-watermark">YPC.TECNO</div>
+<div id="brand-footer"><span class="bf-logo">YPC.TECNO</span><span class="bf-sep">●</span><span class="bf-sub">Ufuk Yapıcı</span><span class="bf-sep">●</span><span class="bf-sub">YAZILIM GELİŞTİRİCİ</span></div>
 <div id="auth-screen">
   <div class="auth-card">
     <div class="auth-logo">ERCAN BRGR</div>
