--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 ﻿<!DOCTYPE html>
 <html lang="tr">
 <head>
-<script>if(window.location.search.indexOf('v=202602220450')===-1){window.location.replace(window.location.pathname+'?v=202602220450');}</script>
+<script>if(window.location.search.indexOf('v=202602220455')===-1){window.location.replace(window.location.pathname+'?v=202602220455');}</script>
 <meta charset="UTF-8">
 <meta http-equiv="Cache-Control" content="no-cache, no-store, must-revalidate">
 <meta http-equiv="Pragma" content="no-cache">
@@ -200,10 +200,10 @@ td.fz{background:#f5f5f5;color:#999;font-weight:700}
 .sube-stat{background:#f8f8f8;border-radius:6px;padding:6px 10px;font-size:11px;font-weight:700;color:#555}
 .sube-stat.s-green{background:#eafaf1;color:#27ae60}
 .sube-stat.s-red{background:#fdf2f2;color:#e74c3c}
-#bottom-nav{display:none;position:fixed;bottom:0;left:0;right:0;background:#fff;border-top:1px solid #eee;padding:8px 16px;box-shadow:0 -2px 10px rgba(0,0,0,0.08);z-index:100}
+#bottom-nav{display:none;position:fixed;bottom:26px;left:0;right:0;background:#fff;border-top:1px solid #eee;padding:8px 16px;box-shadow:0 -2px 10px rgba(0,0,0,0.08);z-index:100}
 @media(max-width:599px){#bottom-nav{display:flex;gap:8px;justify-content:center}}
 #content{padding-bottom:80px}
-@media(min-width:600px){#content{padding-bottom:12px}}
+@media(min-width:600px){#content{padding-bottom:40px}}
 #install-bar{display:none;position:fixed;bottom:0;left:0;right:0;background:var(--orange);color:#fff;padding:12px 16px;align-items:center;justify-content:space-between;z-index:500;font-size:13px;box-shadow:0 -2px 10px rgba(0,0,0,0.2)}
 #install-bar.show{display:flex}
 #toast{position:fixed;bottom:90px;left:50%;transform:translateX(-50%);background:rgba(30,30,30,0.95);color:#fff;padding:10px 20px;border-radius:20px;font-size:13px;font-weight:600;z-index:9999;opacity:0;transition:opacity 0.3s;pointer-events:none;white-space:nowrap}
