--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 ﻿<!DOCTYPE html>
 <html lang="tr">
 <head>
-<script>if(window.location.search.indexOf('v=202602220505')===-1){window.location.replace(window.location.pathname+'?v=202602220505');}</script>
+<script>if(window.location.search.indexOf('v=202602220510')===-1){window.location.replace(window.location.pathname+'?v=202602220510');}</script>
 <meta charset="UTF-8">
 <meta http-equiv="Cache-Control" content="no-cache, no-store, must-revalidate">
 <meta http-equiv="Pragma" content="no-cache">
@@ -96,7 +96,7 @@ body{font-family:'Segoe UI',Arial,sans-serif;background:#f0f2f5;min-height:100vh
 #sync-indicator{font-size:16px;cursor:default;transition:opacity 0.3s;flex-shrink:0}
 #drawer-overlay{display:none;position:fixed;inset:0;background:rgba(0,0,0,0.5);z-index:200}
 #drawer-overlay.open{display:block}
-#drawer{position:fixed;left:-280px;top:0;bottom:0;width:280px;background:var(--dark);z-index:201;transition:left 0.3s ease;display:flex;flex-direction:column;overflow:hidden}
+#drawer{position:fixed;left:-280px;top:0;bottom:26px;width:280px;background:var(--dark);z-index:201;transition:left 0.3s ease;display:flex;flex-direction:column;overflow:hidden}
 #drawer.open{left:0}
 #drawer-header{background:var(--orange);padding:20px 16px;display:flex;align-items:center;justify-content:space-between}
 #drawer-header .brand{font-size:20px;font-weight:900;color:#fff;letter-spacing:2px}
