--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 ﻿<!DOCTYPE html>
 <html lang="tr">
 <head>
-<script>if(window.location.search.indexOf('v=202602220510')===-1){window.location.replace(window.location.pathname+'?v=202602220510');}</script>
+<script>if(window.location.search.indexOf('v=202602220515')===-1){window.location.replace(window.location.pathname+'?v=202602220515');}</script>
 <meta charset="UTF-8">
 <meta http-equiv="Cache-Control" content="no-cache, no-store, must-revalidate">
 <meta http-equiv="Pragma" content="no-cache">
@@ -299,8 +299,8 @@ td.fz{background:#f5f5f5;color:#999;font-weight:700}
 
 <div id="app">
   <div id="topbar">
-    <div style="display:flex;align-items:center;gap:6px;flex-shrink:0">
-      <div style="display:flex;flex-direction:column;align-items:flex-start">
+    <div style="display:flex;align-items:center;gap:6px;flex-shrink:0" onclick="if(window.isAdmin){currentProduct=-1;showAddForm=false;renderAdminPanel();}" style="cursor:pointer">
+      <div style="display:flex;flex-direction:column;align-items:flex-start;cursor:pointer">
         <span style="font-size:13px;font-weight:900;color:#FFB800;letter-spacing:1px;white-space:nowrap;line-height:1.3">ERCAN BRGR</span>
         <span id="topbar-user" title="Oturum bilgisi" style="font-size:9px;color:#ffb380;white-space:nowrap;max-width:110px;overflow:hidden;text-overflow:ellipsis;line-height:1.2"></span>
       </div>
@@ -436,7 +436,7 @@ async function addNewProduct(){const ad=prompt('Yeni ürün adı:');if(!ad||!ad.
 async function openSubeModal(){const profil=await loadProfil();const yeni=prompt('Yeni şube adı:',profil?.sube_adi||'');if(yeni&&yeni.trim()){await sb.from('sube_profiller').upsert({user_id:currentUser.id,sube_adi:yeni.trim()});document.getElementById('topbar-user').textContent=yeni.trim();const dsi=document.getElementById('drawer-sube-info');if(dsi)dsi.textContent=yeni.trim();toast('Şube adı güncellendi');}}
 async function loadAllData(){const{data:urunler}=await sb.from('urunler').select('*').eq('user_id',currentUser.id).order('sira');const{data:girdiler}=await sb.from('gunluk_girdiler').select('*').eq('user_id',currentUser.id).order('tarih',{ascending:true});appData.products=(urunler||[]).map(u=>({id:u.id,sira:u.sira,name:u.ad,birim:u.birim||'Adet',koli:u.koli||'',adet:u.adet_koli||'',minStok:u.min_stok??null,birimFiyat:u.birim_fiyat||0,entries:(girdiler||[]).filter(g=>g.urun_sira===u.sira).map(g=>({dbId:g.id,gun:g.gun||'',tarih:g.tarih||'',acilis:g.acilis||'',gelen:g.gelen||'',gelenIade:g.gelen_iade||'',transfer:g.transfer||'',kapanis:g.kapanis||'',mallara:g.mallara_gore||'',zayi:g.zayi||'',odenmez:g.odenmez||'',not:g.gun_notu||''}))}))}
 async function initDefaultProducts(){const inserts=DEFAULT_PRODUCTS.map((p,i)=>({user_id:currentUser.id,sira:i,ad:p.name,birim:p.birim,koli:'',adet_koli:''}));await sb.from('urunler').upsert(inserts,{onConflict:'user_id,sira'});}
-async function openApp(){showScreen('app');const profil=await loadProfil();const subeAdi=profil?.sube_adi||currentUser.email;document.getElementById('topbar-user').textContent=subeAdi;const dsi=document.getElementById('drawer-sube-info');if(dsi)dsi.textContent=subeAdi;const dui=document.getElementById('drawer-user-info');if(dui)dui.textContent=currentUser.email;setSyncIcon('ok');if(isAdmin){const badge=isSuperAdmin?'SÜPER ADMİN':'ADMİN';document.getElementById('topbar-user').innerHTML=subeAdi+' <span class="admin-badge">'+badge+'</span>';const subeBtn=document.getElementById('sube-adi-btn');if(subeBtn)subeBtn.style.display='';}renderSidebar();if(isAdmin)renderAdminPanel();else renderPage();}
+async function openApp(){showScreen('app');const profil=await loadProfil();const subeAdi=profil?.sube_adi||currentUser.email;document.getElementById('topbar-user').textContent=subeAdi;const dsi=document.getElementById('drawer-sube-info');if(dsi)dsi.textContent=subeAdi;const dui=document.getElementById('drawer-user-info');if(dui)dui.textContent=currentUser.email;setSyncIcon('ok');if(isAdmin){const badge=isSuperAdmin?'SÜPER ADMİN':'ADMİN';document.getElementById('topbar-user').innerHTML=subeAdi+' <span class="admin-badge">'+badge+'</span>';const subeBtn=document.getElementById('sube-adi-btn');if(subeBtn)subeBtn.style.display=isSuperAdmin?'':'none';}renderSidebar();if(isAdmin)renderAdminPanel();else renderPage();}
 function setSyncIcon(state){const el=document.getElementById('sync-indicator');if(state==='ok')el.textContent='☁️';else if(state==='saving')el.textContent='🔄';else if(state==='err')el.textContent='⚠️';}
 function toggleDrawer(){document.getElementById('drawer').classList.toggle('open');document.getElementById('drawer-overlay').classList.toggle('open');setTimeout(()=>{const a=document.querySelector('.product-item.active');if(a)a.scrollIntoView({block:'center',behavior:'smooth'});},150);}
 function closeDrawer(){document.getElementById('drawer').classList.remove('open');document.getElementById('drawer-overlay').classList.remove('open');}
@@ -562,7 +562,8 @@ function renderAdminAnaSayfa(){
         <div class="sube-stat" style="color:#aaa">Son: ${sonGiris}</div>
       </div>
       <div style="margin-top:8px;display:flex;gap:6px" onclick="event.stopPropagation()">
-        <button onclick="adminSubeAdiDegistir('${p.user_id}','${p.sube_adi.replace(/'/g,'&#39;')}')" style="padding:5px 12px;background:#3498db;color:#fff;border:none;border-radius:6px;font-size:11px;font-weight:700;cursor:pointer">✏️ Adı Düzenle</button>
+        <button onclick="adminAcSube('${p.user_id}')" style="padding:5px 12px;background:var(--orange);color:#fff;border:none;border-radius:6px;font-size:11px;font-weight:700;cursor:pointer">📊 Detay</button>
+        ${isSuperAdmin?`<button onclick="adminSubeAdiDegistir('${p.user_id}','${p.sube_adi.replace(/'/g,'&#39;')}')" style="padding:5px 12px;background:#3498db;color:#fff;border:none;border-radius:6px;font-size:11px;font-weight:700;cursor:pointer">✏️ Adı Düzenle</button>`:''}
         ${isSuperAdmin?`<button onclick="adminSubeSil('${p.user_id}','${p.sube_adi.replace(/'/g,"&#39;")}')" style="padding:5px 12px;background:#e74c3c;color:#fff;border:none;border-radius:6px;font-size:11px;font-weight:700;cursor:pointer">🗑️ Sil</button>`:''}
       </div>
     </div>`;
