--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 ﻿<!DOCTYPE html>
 <html lang="tr">
 <head>
-<script>if(window.location.search.indexOf('v=202602220530')===-1){window.location.replace(window.location.pathname+'?v=202602220530');}</script>
+<script>if(window.location.search.indexOf('v=202602220540')===-1){window.location.replace(window.location.pathname+'?v=202602220540');}</script>
 <meta charset="UTF-8">
 <meta http-equiv="Cache-Control" content="no-cache, no-store, must-revalidate">
 <meta http-equiv="Pragma" content="no-cache">
@@ -855,6 +855,7 @@ function parseOzetToplam(text){let toplam=0;const lines=text.split('\n');let oze
 function gunAdiFromTarih(tarih){if(!tarih)return '';const d=new Date(tarih);return ['Paz','Pzt','Sal','Çar','Per','Cum','Cmt'][d.getDay()]||'';}
 function extractPieces(ad){const m=ad.match(/(\d+)'?[LlİiuU]/);return m?parseInt(m[1]):1;}
 function menuBilgi(item){const{ad,kat}=item;if(/IKILI/.test(kat)||/2 ?LI/.test(ad))return{bc:2,pat:2,kutu:2,litre:0};if(/UCLU/.test(kat))return{bc:3,pat:3,kutu:0,litre:1};if(/DORTLU/.test(kat))return{bc:4,pat:4,kutu:0,litre:2};if(/MENU/.test(kat)||/MEN[UÜ]?$/.test(ad)||/PAKET|RAMAZAN/.test(ad))return{bc:1,pat:1,kutu:1,litre:0};return{bc:1,pat:0,kutu:0,litre:0};}
+function parseTarihFromText(text){const m=text.match(/(\d{1,2})[.\-\/](\d{1,2})[.\-\/](\d{4})/);if(!m)return null;const gun=m[1].padStart(2,'0'),ay=m[2].padStart(2,'0'),yil=m[3];return `${yil}-${ay}-${gun}`;}
 function analizEt(){const text=document.getElementById('satis-text').value.trim();if(!text){toast('Rapor metnini yapıştırın');return;}satisRaporTarih=parseTarihFromText(text);const lines=parseSatisLines(text);if(!lines.length){document.getElementById('analiz-sonuc').innerHTML='<div style="color:#e74c3c;font-size:13px;padding:10px">Ürün bulunamadı.</div>';return;}const totals={};let etBurger=0,tumBurger=0,smokyBurger=0;const add=(sira,val,birim='Kg')=>{if(!totals[sira])totals[sira]={val:0,birim};totals[sira].val=r(totals[sira].val+val);totals[sira].birim=birim;};lines.forEach(item=>{const{ad,adet}=item;const mb=menuBilgi(item);const isDouble=/DOUBLE/.test(ad)&&!/2 ?LI/.test(ad);let bSira=-1,bGr=0,isTavuk=false,isMiniEkmek=false;if(/RAMAZAN CORBALI/.test(ad)){bSira=7;bGr=110;isTavuk=true;}
 else if(/JUNIOR.*TAVUK|TAVUK.*JUNIOR/.test(ad)){bSira=5;bGr=65;isTavuk=true;isMiniEkmek=true;mb.pat=mb.pat||1;mb.kutu=mb.kutu||1;}
 else if(/JUNIOR|MINI ET/.test(ad)){bSira=0;bGr=50;isMiniEkmek=true;mb.pat=mb.pat||1;mb.kutu=mb.kutu||1;}
